[gd_scene load_steps=6 format=2]

[ext_resource path="res://etc/I-pixel-u.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://scripts/settingsUI.gd" type="Script" id=2]

[sub_resource type="DynamicFont" id=1]
size = 64
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=2]
size = 32
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=3]
size = 32
font_data = ExtResource( 1 )

[node name="settingsUI" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="."]
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label2" type="Label" parent="VBoxContainer"]
margin_right = 384.0
margin_bottom = 80.0
custom_fonts/font = SubResource( 1 )
text = "SETTINGS"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CenterContainer" type="CenterContainer" parent="VBoxContainer"]
margin_top = 84.0
margin_right = 384.0
margin_bottom = 130.0

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer/CenterContainer"]
margin_left = 64.0
margin_right = 320.0
margin_bottom = 46.0

[node name="minus" type="Button" parent="VBoxContainer/CenterContainer/HBoxContainer"]
margin_right = 28.0
margin_bottom = 46.0
custom_fonts/font = SubResource( 2 )
text = "-"
flat = true

[node name="Label" type="Label" parent="VBoxContainer/CenterContainer/HBoxContainer"]
margin_left = 32.0
margin_top = 3.0
margin_right = 224.0
margin_bottom = 43.0
custom_fonts/font = SubResource( 3 )
text = "VOLUME: 5"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="plus" type="Button" parent="VBoxContainer/CenterContainer/HBoxContainer"]
margin_left = 228.0
margin_right = 256.0
margin_bottom = 46.0
custom_fonts/font = SubResource( 2 )
text = "+"
flat = true

[node name="minus2" type="Button" parent="VBoxContainer"]
margin_top = 134.0
margin_right = 384.0
margin_bottom = 180.0
custom_fonts/font = SubResource( 2 )
toggle_mode = true
text = "FULLSCREEN: ON"
flat = true
[connection signal="pressed" from="VBoxContainer/CenterContainer/HBoxContainer/minus" to="." method="_on_minus_pressed"]
[connection signal="pressed" from="VBoxContainer/CenterContainer/HBoxContainer/plus" to="." method="_on_plus_pressed"]
[connection signal="toggled" from="VBoxContainer/minus2" to="." method="_on_minus2_toggled"]
